--- a/miguel/Datathon_equipo_5.ipynb
+++ b/miguel/Datathon_equipo_5.ipynb
@@ -21,8 +21,8 @@
    "metadata": {
     "id": "6c4G9BX92YTn",
     "ExecuteTime": {
-     "end_time": "2025-10-15T15:31:17.611424Z",
-     "start_time": "2025-10-15T15:31:17.609302Z"
+     "end_time": "2025-10-15T16:41:05.988940Z",
+     "start_time": "2025-10-15T16:41:05.986546Z"
     }
    },
    "source": [
@@ -32,7 +32,7 @@
     "import seaborn as sns"
    ],
    "outputs": [],
-   "execution_count": 26
+   "execution_count": 51
   },
   {
    "cell_type": "markdown",
@@ -48,13 +48,13 @@
    "metadata": {
     "id": "GGXai5PD8LU2",
     "ExecuteTime": {
-     "end_time": "2025-10-15T15:31:17.674654Z",
-     "start_time": "2025-10-15T15:31:17.621910Z"
+     "end_time": "2025-10-15T16:41:06.050290Z",
+     "start_time": "2025-10-15T16:41:05.995183Z"
     }
    },
    "source": "data = pd.read_parquet(\"../data/01_table.parquet\")",
    "outputs": [],
-   "execution_count": 27
+   "execution_count": 52
   },
   {
    "cell_type": "markdown",
@@ -74,8 +74,8 @@
     "id": "s9mYIPQJFad_",
     "outputId": "2760889b-b600-41ac-d3b1-06febd96e4d7",
     "ExecuteTime": {
-     "end_time": "2025-10-15T15:31:17.678792Z",
-     "start_time": "2025-10-15T15:31:17.676984Z"
+     "end_time": "2025-10-15T16:41:06.058248Z",
+     "start_time": "2025-10-15T16:41:06.056375Z"
     }
    },
    "source": [
@@ -88,12 +88,12 @@
        "(963419, 7)"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 53,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 28
+   "execution_count": 53
   },
   {
    "cell_type": "code",
@@ -104,8 +104,8 @@
     "id": "IqVI6kKCiKTz",
     "outputId": "d8e23642-9876-496c-c14d-ff1b1f2c16df",
     "ExecuteTime": {
-     "end_time": "2025-10-15T15:31:17.742321Z",
-     "start_time": "2025-10-15T15:31:17.682940Z"
+     "end_time": "2025-10-15T16:41:06.127579Z",
+     "start_time": "2025-10-15T16:41:06.068843Z"
     }
    },
    "source": [
@@ -133,7 +133,7 @@
      ]
     }
    ],
-   "execution_count": 29
+   "execution_count": 54
   },
   {
    "cell_type": "code",
@@ -145,8 +145,8 @@
     "id": "TNupyX_S_S9g",
     "outputId": "3b26338e-dc24-4c5d-b663-151478d90951",
     "ExecuteTime": {
-     "end_time": "2025-10-15T15:31:17.750968Z",
-     "start_time": "2025-10-15T15:31:17.747294Z"
+     "end_time": "2025-10-15T16:41:06.141067Z",
+     "start_time": "2025-10-15T16:41:06.137908Z"
     }
    },
    "source": [
@@ -275,12 +275,12 @@
        "</div>"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 55,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 30
+   "execution_count": 55
   },
   {
    "cell_type": "code",
@@ -292,8 +292,8 @@
     "id": "ml_W-zfP7pzC",
     "outputId": "5ba90fbf-fc3c-4963-f794-b9eaf053fa21",
     "ExecuteTime": {
-     "end_time": "2025-10-15T15:31:17.939688Z",
-     "start_time": "2025-10-15T15:31:17.775317Z"
+     "end_time": "2025-10-15T16:41:06.303461Z",
+     "start_time": "2025-10-15T16:41:06.160571Z"
     }
    },
    "source": [
@@ -512,12 +512,12 @@
        "</div>"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 56,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 31
+   "execution_count": 56
   },
   {
    "cell_type": "markdown",
@@ -533,15 +533,15 @@
    "metadata": {
     "id": "od3OgBTw83gR",
     "ExecuteTime": {
-     "end_time": "2025-10-15T15:31:17.973589Z",
-     "start_time": "2025-10-15T15:31:17.971743Z"
+     "end_time": "2025-10-15T16:41:06.330210Z",
+     "start_time": "2025-10-15T16:41:06.328053Z"
     }
    },
    "source": [
     "data.columns = ['Seccio_censal', 'Districte', 'Municipi', 'Data', 'Tipus_us', 'Numero_de_comptadors', 'Consum_litres_per_dia' ]"
    ],
    "outputs": [],
-   "execution_count": 32
+   "execution_count": 57
   },
   {
    "cell_type": "markdown",
@@ -557,15 +557,15 @@
    "metadata": {
     "id": "bIOcAnDD-Uy7",
     "ExecuteTime": {
-     "end_time": "2025-10-15T15:31:18.094291Z",
-     "start_time": "2025-10-15T15:31:18.014846Z"
+     "end_time": "2025-10-15T16:41:06.435391Z",
+     "start_time": "2025-10-15T16:41:06.357812Z"
     }
    },
    "source": [
     "data = data.dropna()"
    ],
    "outputs": [],
-   "execution_count": 33
+   "execution_count": 58
   },
   {
    "cell_type": "markdown",
@@ -586,8 +586,8 @@
     "id": "V9Ou1A8F_9Ql",
     "outputId": "2262d570-6f90-43fe-90d3-1af4217c4ae5",
     "ExecuteTime": {
-     "end_time": "2025-10-15T15:32:16.924149Z",
-     "start_time": "2025-10-15T15:32:16.797662Z"
+     "end_time": "2025-10-15T16:41:06.556450Z",
+     "start_time": "2025-10-15T16:41:06.439251Z"
     }
    },
    "source": [
@@ -613,7 +613,7 @@
      "traceback": [
       "\u001B[31m---------------------------------------------------------------------------\u001B[39m",
       "\u001B[31mValueError\u001B[39m                                Traceback (most recent call last)",
-      "\u001B[36mCell\u001B[39m\u001B[36m \u001B[39m\u001B[32mIn[40]\u001B[39m\u001B[32m, line 1\u001B[39m\n\u001B[32m----> \u001B[39m\u001B[32m1\u001B[39m data[\u001B[33m'\u001B[39m\u001B[33mSeccio_censal\u001B[39m\u001B[33m'\u001B[39m] = \u001B[43mdata\u001B[49m\u001B[43m[\u001B[49m\u001B[33;43m'\u001B[39;49m\u001B[33;43mSeccio_censal\u001B[39;49m\u001B[33;43m'\u001B[39;49m\u001B[43m]\u001B[49m\u001B[43m.\u001B[49m\u001B[43mastype\u001B[49m\u001B[43m(\u001B[49m\u001B[33;43m'\u001B[39;49m\u001B[33;43mInt64\u001B[39;49m\u001B[33;43m'\u001B[39;49m\u001B[43m)\u001B[49m   \u001B[38;5;66;03m# nullable integer\u001B[39;00m\n\u001B[32m      2\u001B[39m data[\u001B[33m'\u001B[39m\u001B[33mDistricte\u001B[39m\u001B[33m'\u001B[39m] = data[\u001B[33m'\u001B[39m\u001B[33mDistricte\u001B[39m\u001B[33m'\u001B[39m].astype(\u001B[33m'\u001B[39m\u001B[33mInt64\u001B[39m\u001B[33m'\u001B[39m)\n\u001B[32m      3\u001B[39m data[\u001B[33m'\u001B[39m\u001B[33mNumero_de_comptadors\u001B[39m\u001B[33m'\u001B[39m] = data[\u001B[33m'\u001B[39m\u001B[33mNumero_de_comptadors\u001B[39m\u001B[33m'\u001B[39m].astype(\u001B[33m'\u001B[39m\u001B[33mInt64\u001B[39m\u001B[33m'\u001B[39m)\n",
+      "\u001B[36mCell\u001B[39m\u001B[36m \u001B[39m\u001B[32mIn[59]\u001B[39m\u001B[32m, line 1\u001B[39m\n\u001B[32m----> \u001B[39m\u001B[32m1\u001B[39m data[\u001B[33m'\u001B[39m\u001B[33mSeccio_censal\u001B[39m\u001B[33m'\u001B[39m] = \u001B[43mdata\u001B[49m\u001B[43m[\u001B[49m\u001B[33;43m'\u001B[39;49m\u001B[33;43mSeccio_censal\u001B[39;49m\u001B[33;43m'\u001B[39;49m\u001B[43m]\u001B[49m\u001B[43m.\u001B[49m\u001B[43mastype\u001B[49m\u001B[43m(\u001B[49m\u001B[33;43m'\u001B[39;49m\u001B[33;43mInt64\u001B[39;49m\u001B[33;43m'\u001B[39;49m\u001B[43m)\u001B[49m   \u001B[38;5;66;03m# nullable integer\u001B[39;00m\n\u001B[32m      2\u001B[39m data[\u001B[33m'\u001B[39m\u001B[33mDistricte\u001B[39m\u001B[33m'\u001B[39m] = data[\u001B[33m'\u001B[39m\u001B[33mDistricte\u001B[39m\u001B[33m'\u001B[39m].astype(\u001B[33m'\u001B[39m\u001B[33mInt64\u001B[39m\u001B[33m'\u001B[39m)\n\u001B[32m      3\u001B[39m data[\u001B[33m'\u001B[39m\u001B[33mNumero_de_comptadors\u001B[39m\u001B[33m'\u001B[39m] = data[\u001B[33m'\u001B[39m\u001B[33mNumero_de_comptadors\u001B[39m\u001B[33m'\u001B[39m].astype(\u001B[33m'\u001B[39m\u001B[33mInt64\u001B[39m\u001B[33m'\u001B[39m)\n",
       "\u001B[36mFile \u001B[39m\u001B[32m~/coda/tools/mindsdbpb/venv/lib/python3.12/site-packages/pandas/core/generic.py:6637\u001B[39m, in \u001B[36mNDFrame.astype\u001B[39m\u001B[34m(self, dtype, copy, errors)\u001B[39m\n\u001B[32m   6631\u001B[39m     results = [\n\u001B[32m   6632\u001B[39m         ser.astype(dtype, copy=copy, errors=errors) \u001B[38;5;28;01mfor\u001B[39;00m _, ser \u001B[38;5;129;01min\u001B[39;00m \u001B[38;5;28mself\u001B[39m.items()\n\u001B[32m   6633\u001B[39m     ]\n\u001B[32m   6635\u001B[39m \u001B[38;5;28;01melse\u001B[39;00m:\n\u001B[32m   6636\u001B[39m     \u001B[38;5;66;03m# else, only a single dtype is given\u001B[39;00m\n\u001B[32m-> \u001B[39m\u001B[32m6637\u001B[39m     new_data = \u001B[38;5;28;43mself\u001B[39;49m\u001B[43m.\u001B[49m\u001B[43m_mgr\u001B[49m\u001B[43m.\u001B[49m\u001B[43mastype\u001B[49m\u001B[43m(\u001B[49m\u001B[43mdtype\u001B[49m\u001B[43m=\u001B[49m\u001B[43mdtype\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43mcopy\u001B[49m\u001B[43m=\u001B[49m\u001B[43mcopy\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43merrors\u001B[49m\u001B[43m=\u001B[49m\u001B[43merrors\u001B[49m\u001B[43m)\u001B[49m\n\u001B[32m   6638\u001B[39m     res = \u001B[38;5;28mself\u001B[39m._constructor_from_mgr(new_data, axes=new_data.axes)\n\u001B[32m   6639\u001B[39m     \u001B[38;5;28;01mreturn\u001B[39;00m res.__finalize__(\u001B[38;5;28mself\u001B[39m, method=\u001B[33m\"\u001B[39m\u001B[33mastype\u001B[39m\u001B[33m\"\u001B[39m)\n",
       "\u001B[36mFile \u001B[39m\u001B[32m~/coda/tools/mindsdbpb/venv/lib/python3.12/site-packages/pandas/core/internals/managers.py:431\u001B[39m, in \u001B[36mBaseBlockManager.astype\u001B[39m\u001B[34m(self, dtype, copy, errors)\u001B[39m\n\u001B[32m    428\u001B[39m \u001B[38;5;28;01melif\u001B[39;00m using_copy_on_write():\n\u001B[32m    429\u001B[39m     copy = \u001B[38;5;28;01mFalse\u001B[39;00m\n\u001B[32m--> \u001B[39m\u001B[32m431\u001B[39m \u001B[38;5;28;01mreturn\u001B[39;00m \u001B[38;5;28;43mself\u001B[39;49m\u001B[43m.\u001B[49m\u001B[43mapply\u001B[49m\u001B[43m(\u001B[49m\n\u001B[32m    432\u001B[39m \u001B[43m    \u001B[49m\u001B[33;43m\"\u001B[39;49m\u001B[33;43mastype\u001B[39;49m\u001B[33;43m\"\u001B[39;49m\u001B[43m,\u001B[49m\n\u001B[32m    433\u001B[39m \u001B[43m    \u001B[49m\u001B[43mdtype\u001B[49m\u001B[43m=\u001B[49m\u001B[43mdtype\u001B[49m\u001B[43m,\u001B[49m\n\u001B[32m    434\u001B[39m \u001B[43m    \u001B[49m\u001B[43mcopy\u001B[49m\u001B[43m=\u001B[49m\u001B[43mcopy\u001B[49m\u001B[43m,\u001B[49m\n\u001B[32m    435\u001B[39m \u001B[43m    \u001B[49m\u001B[43merrors\u001B[49m\u001B[43m=\u001B[49m\u001B[43merrors\u001B[49m\u001B[43m,\u001B[49m\n\u001B[32m    436\u001B[39m \u001B[43m    \u001B[49m\u001B[43musing_cow\u001B[49m\u001B[43m=\u001B[49m\u001B[43musing_copy_on_write\u001B[49m\u001B[43m(\u001B[49m\u001B[43m)\u001B[49m\u001B[43m,\u001B[49m\n\u001B[32m    437\u001B[39m \u001B[43m\u001B[49m\u001B[43m)\u001B[49m\n",
       "\u001B[36mFile \u001B[39m\u001B[32m~/coda/tools/mindsdbpb/venv/lib/python3.12/site-packages/pandas/core/internals/managers.py:364\u001B[39m, in \u001B[36mBaseBlockManager.apply\u001B[39m\u001B[34m(self, f, align_keys, **kwargs)\u001B[39m\n\u001B[32m    362\u001B[39m         applied = b.apply(f, **kwargs)\n\u001B[32m    363\u001B[39m     \u001B[38;5;28;01melse\u001B[39;00m:\n\u001B[32m--> \u001B[39m\u001B[32m364\u001B[39m         applied = \u001B[38;5;28;43mgetattr\u001B[39;49m\u001B[43m(\u001B[49m\u001B[43mb\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43mf\u001B[49m\u001B[43m)\u001B[49m\u001B[43m(\u001B[49m\u001B[43m*\u001B[49m\u001B[43m*\u001B[49m\u001B[43mkwargs\u001B[49m\u001B[43m)\u001B[49m\n\u001B[32m    365\u001B[39m     result_blocks = extend_blocks(applied, result_blocks)\n\u001B[32m    367\u001B[39m out = \u001B[38;5;28mtype\u001B[39m(\u001B[38;5;28mself\u001B[39m).from_blocks(result_blocks, \u001B[38;5;28mself\u001B[39m.axes)\n",
@@ -628,7 +628,7 @@
      ]
     }
    ],
-   "execution_count": 40
+   "execution_count": 59
   },
   {
    "cell_type": "markdown",
@@ -767,7 +767,7 @@
    "cell_type": "code",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-10-15T15:31:23.261182Z",
+     "end_time": "2025-10-15T16:41:06.564412Z",
      "start_time": "2025-10-15T15:31:23.259518Z"
     }
    },
@@ -781,7 +781,7 @@
    "cell_type": "code",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-10-15T15:31:24.552867Z",
+     "end_time": "2025-10-15T16:41:06.564578Z",
      "start_time": "2025-10-15T15:31:24.550138Z"
     }
    },
@@ -797,7 +797,7 @@
    "metadata": {
     "id": "mCXXTQhNVcKN",
     "ExecuteTime": {
-     "end_time": "2025-10-15T15:32:01.468140Z",
+     "end_time": "2025-10-15T16:41:06.564702Z",
      "start_time": "2025-10-15T15:32:01.307207Z"
     }
    },
@@ -841,7 +841,12 @@
   },
   {
    "cell_type": "code",
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-10-15T16:41:06.564895Z",
+     "start_time": "2025-10-15T16:38:57.200515Z"
+    }
+   },
    "source": [
     "for key, table in tables.items():\n",
     "    # Reemplaza espacios o caracteres especiales en el nombre del archivo\n",
@@ -850,7 +855,7 @@
     "    table.to_csv(filepath, index=False, encoding='utf-8')"
    ],
    "outputs": [],
-   "execution_count": null
+   "execution_count": 50
   },
   {
    "cell_type": "code",
